# duo-buildroot-sdk-v2

./: .gitignore  README.md  build.sh
cnpy/: CMakeLists.txt  example1.cpp
cvibuilder/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
cvibuilder/proto/: parameter.fbs
cvikernel/: CMakeLists.txt  README.md
cvikernel/src/: bm_kernel.c  bmkernel_standard.h  cvikernel.c  engine_conductor.c  engine_conductor.h  engine_state.c  engine_state.h  kernel_internal.h  lmem.c  lmem.h  mode_manager.c  mode_manager.h  parallel_mode.c  serial_mode.c  stream_mode.c
cvikernel/tools/: readcmdbuf.cpp
cvimath/: .gitignore  CMakeLists.txt  README.md  clang-format.sh
cvimath/include/: cvimath_internal.h  test_cvikernel_util.h
cvimath/sample/: CMakeLists.txt  README.md  sample_bf16_fp32.cpp  sample_fp32_bf16.cpp  sample_gemm.cpp  sample_mask.cpp  sample_reduce_mul.cpp  sample_set_val_by_mask.cpp  sample_sigmoid_linear_interp.cpp  sample_upsample.cpp
cvimath/src/: 1880v2_fp_convert.c  CMakeLists.txt  bf16_gemm.c  blas_cpu.cpp  chl_quan.cpp  common.c  fp32_bf16_kernel.c  set_val_by_mask.c  tiu_lut_atan.c  tiu_lut_atan2.c  tiu_reciprocal.c  tiu_reshape_c.c  tiu_sigmoid.c  tiu_sqrt.c  tiu_upsample.c  util.c
cvimath/tests/: CMakeLists.txt
cvimath/toolchain/: toolchain-aarch64-linux.cmake  toolchain-gnueabihf-linux.cmake
cviruntime/: .gitignore  CMakeLists.txt  README.md  build_tpu_sdk.sh
cviruntime/doc/: cvitek_tpu_sdk_development_manual.md
cviruntime/include/: cvitpu_debug.h
cviruntime/python/: CMakeLists.txt  README  cvk_test.py  eval_imagenet.py  pyruntime.cpp  test.py
cviruntime/samples/: CMakeLists.txt  README.md  run_classifier.sh  run_classifier_bf16.sh  run_classifier_fused_preprocess.sh  run_classifier_multi_batch.sh
cviruntime/scripts/: README.md  envs_tpu_sdk.sh  regression_models_cv180x.sh  regression_models_cv181x.sh  regression_models_cv182x.sh  regression_models_cv183x.sh  regression_models_e2e_cv180x.sh  regression_models_e2e_cv181x.sh  regression_models_e2e_cv182x.sh  regression_models_e2e_cv183x.sh  regression_new_models_cv180x.sh  regression_new_models_cv181x.sh  regression_new_models_cv182x.sh  regression_new_models_cv183x.sh  regression_samples_cv180x.sh  regression_samples_cv181x.sh  regression_samples_cv183x.sh  toolchain-aarch64-linux.cmake  toolchain-linux-gnueabihf.cmake  toolchain-linux-uclibc.cmake  toolchain-riscv64-linux-musl-x86_64.cmake  toolchain-riscv64-linux-musl-x86_64_legacy.cmake  toolchain-riscv64-linux-x86_64.cmake  toolchain.cmake
cviruntime/src/: CMakeLists.txt
cviruntime/test/: CMakeLists.txt
cviruntime/tool/: CMakeLists.txt  argparse.hpp  cvimodel_tool.cpp  model_interface_tester.cpp  model_runner.cpp  multi_model_tester.cpp  multi_thread_tester.cpp  similarity.hpp  stress_tester.cpp
ive/: .gitignore  CMakeLists.txt  README.md  clang-format.sh
ive/cmake/: ive.cmake  middleware.cmake  mlir.cmake
ive/include/: core.hpp  cvi_comm_ive.h  cvi_draw_ive.h  cvi_ive.h  cvi_module_core.h  cvi_tpu_ive.h  ive.h  ive_draw.h  ive_experimental.h  kernel_generator.hpp  neon_utils.hpp  table_manager.hpp  tpu_data.hpp  utils.hpp
ive/modules/: CMakeLists.txt  modules_core.cpp
ive/sample/: CMakeLists.txt  sample_16bitTo8bit.c  sample_add.c  sample_alpha_blend.c  sample_alpha_blend_pixel.c  sample_alpha_blend_pixel_yuv420.c  sample_alpha_blend_pixel_yuv420_roi.c  sample_alpha_blend_y.c  sample_and.c  sample_average.c  sample_block.c  sample_convert_scale_abs.c  sample_copy.c  sample_copy_yuv420p.c  sample_copy_yuv420sp.c  sample_dilate.c  sample_downsample.c  sample_draw_rect.c  sample_filter.c  sample_histEq.c  sample_histogram.c  sample_hog.c  sample_integral_image.c  sample_island.c  sample_lbp.c  sample_magandang.c  sample_manual.c  sample_map.c  sample_mask.c  sample_md.cpp  sample_morph.c  sample_ncc.c  sample_normgrad.c  sample_or.c  sample_ordstat.c  sample_sad.c  sample_sub.c  sample_thresh.c  sample_thresh16.c  sample_threshold.c  (+1 more)
ive/scripts/: batch_image_resize.sh  codecheck.sh  run_video.sh  sdk_release.sh  test_funcs.sh  test_samples.sh
ive/src/: CMakeLists.txt  core.cpp  ive.cpp  ive_draw.cpp  ive_internal.hpp  ive_log.hpp  kernel_generator.cpp  table_manager.cpp  tpu_data.cpp  tpu_ive.cpp  version.hpp.in
ive/test/: CMakeLists.txt  test_16bitTo8bit_c.c  test_add_c.c  test_and_c.c  test_blend_s8_c.c  test_blend_u8_ab_c.c  test_blend_y.c  test_block_c.c  test_cmp_c.c  test_copy2_c.c  test_copy_c.c  test_csc_c.c  test_cviimg_c.c  test_filter_c.c  test_filter_csc_c.c  test_histEq_c.c  test_histogram_c.c  test_hog_batch_c.c  test_hog_c.c  test_integral_image_c.c  test_island_c.c  test_lbp_c.c  test_morph_c.c  test_mulsum_c.c  test_ncc_c.c  test_norm_grad_c.c  test_or_c.c  test_read_c.c  test_resize_c.c  test_s8_cmp_c.c  test_sad_c.c  test_sad_stereo_c.c  test_sigmoid_c.c  test_sobel_grad_c.c  test_table_c.c  test_threshold_c.c  test_thresholds16_c.c  test_thresholdu16_c.c  test_xor_c.c
ive/toolchain/: toolchain-gnueabihf-linux.cmake  toolchain-riscv64-musl.cmake  toolchain-uclibc-linux.cmake
tdl_sdk/: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  README_en.md  ThirdPartyNotices.txt  build_tdl_sdk.sh  clang-format.sh  clang-tidy.sh  xgit.sh
tdl_sdk/cmake/: cvi_rtsp.cmake  ive.cmake  middleware.cmake  mlir.cmake  opencv.cmake  thirdparty.cmake  tracer.cmake
tdl_sdk/docs/: .gitignore  Makefile  README.md
tdl_sdk/doxygen/: Doxyfile
tdl_sdk/include/: cvi_comm.h  cvi_tdl.h  cvi_tdl_experimental.h  cvi_tdl_log.hpp  cvi_tdl_media.h
tdl_sdk/lib/: CMakeLists.txt
tdl_sdk/modules/: CMakeLists.txt  version.hpp.in
tdl_sdk/regression/: daily_regression.sh
tdl_sdk/sample/: CMakeLists.txt  Makefile  middleware_utils.c  middleware_utils.h  sample_adas.c  sample_app_hardhat_detection.c  sample_aud_cls_read.c  sample_aud_cry.c  sample_aud_order.cpp  sample_audio_cls.c  sample_baby_aud_det.c  sample_cap_face.c  sample_cap_face_pet.c  sample_clip.c  sample_clip_image.c  sample_clip_pipeline.c  sample_clip_text.c  sample_dms_landmarks.c  sample_face_attribute_cls.c  (+72 more)
(+3730 files in other folders)
